--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://m-abdelmegeed.github.io/Portofolio/",
   "name": "portofolio-website",
   "version": "0.1.0",
   "private": true,
