--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mohammed-abdelmegeed.me",
+  "homepage": "http://mohammed-abdelmegeed.me",
   "name": "portofolio-website",
   "version": "0.1.0",
   "private": true,
